# online-ping-pong

./: .gitignore  README.md  kill_p.sh  kill_server.sh  meson.build
include/: common.h  const.h  log.h  net-types.h  net.h  netpong.h  ppg.h  tpool.h  types.h
src/: client.c  events.c  log.c  main.c  meson.build  screen.c  server.c  setup.c
src/net/: ball.c  client.c  meson.build  net.c  server.c  tpool.c
src/pong/: audio.c  ball.c  events.c  meson.build  paddle.c  player.c  screen.c
src/utils/: log.c  setup.c
tests/: meson.build  test-bmp.c  test-img.c  test-net.c  test-server.c  test-user-input.c
